[package]
name = "munge-sys"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Will-Shanks/munge-sys"
description = "Raw FFI bindings for munge https://github.com/dun/munge"
keywords = ["ffi", "hpc", "bindings", "security"]

[build-dependencies]
bindgen = { version = "0.69", optional = true }

[features]
default = []
static = []
